--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
-    "start": "run-s clean build serve",
+    "start": "run-p start:webpack start:tsc start:electron",
+    "start:electron": "electron .",
+    "start:tsc": "tsc -w -p tsconfig.main.json",
+    "start:webpack": "cross-env NODE_ENV=\"development\" webpack --watch",
     "clean": "rimraf dist",
-    "serve": "electron .",
-    "build": "cross-env NODE_ENV=\"development\" webpack --progress",
     "build:prod": "cross-env NODE_ENV=\"production\" webpack --progress",
     "build:pack": "ts-node ./scripts/build.ts",
     "package": "run-s clean build:prod build:pack"
@@ -25,6 +26,8 @@
     "css-loader": "^5.2.6",
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
+    "electron-is-dev": "^2.0.0",
+    "electron-reload": "^1.5.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.2",
     "npm-run-all": "^4.1.5",
