--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "run-p start:webpack start:tsc start:electron",
-    "start:electron": "electron .",
+    "start:electron": "wait-on ./dist/index.html && electron .",
     "start:tsc": "tsc -w -p tsconfig.main.json",
     "start:webpack": "cross-env NODE_ENV=\"development\" webpack --watch",
     "clean": "rimraf dist",
@@ -28,6 +28,7 @@
     "electron-builder": "^22.11.7",
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^1.5.0",
+    "electron-search-devtools": "^1.2.4",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "npm-run-all": "^4.1.5",
@@ -37,6 +38,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
+    "wait-on": "^6.0.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   },
