chore: Updated the include entry.

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -9,5 +9,5 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/main/*.ts"]
 }
