--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
-    "start": "run-p start:webpack start:tsc start:electron",
-    "start:electron": "wait-on ./dist/index.html && electron .",
-    "start:tsc": "tsc -w -p tsconfig.main.json",
-    "start:webpack": "cross-env NODE_ENV=\"development\" webpack --watch",
-    "clean": "rimraf dist",
-    "build:prod": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "start": "run-s clean build:prod serve",
+    "predev": "rimraf dist",
+    "dev": "run-p dev:*",
+    "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
+    "dev:tsc": "tsc -w -p tsconfig.main.json",
+    "dev:webpack": "webpack --watch",
+    "serve": "electron .",
+    "clean": "rimraf dist release",
+    "build:prod": "webpack --config webpack.config.prod.ts --progress",
     "build:pack": "ts-node ./scripts/build.ts",
     "package": "run-s clean build:prod build:pack"
   },
@@ -26,10 +29,9 @@
     "css-loader": "^6.2.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
-    "electron-is-dev": "^2.0.0",
-    "electron-reload": "^1.5.0",
     "electron-search-devtools": "^1.2.6",
     "html-webpack-plugin": "^5.3.2",
+    "ifdef-loader": "^2.3.0",
     "mini-css-extract-plugin": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -38,17 +40,18 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
-    "wait-on": "^6.0.0",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2"
   },
   "optionalDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "electron-reload": "^1.5.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "wait-on": "^6.0.0"
   }
 }
