--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -1,12 +1,7 @@
 {
+  "extends": ".",
   "compilerOptions": {
-    "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "outDir": "dist"
   },
   "include": ["src/*.ts"]
