chore: Removed simple-git-hooks.

--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "package": "run-s clean build:prod build:pack",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint . --ext .ts,.tsx --fix",
-    "lint:prettier": "prettier --write .",
-    "prepare": "simple-git-hooks"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "yarn lint"
+    "lint:prettier": "prettier --write ."
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -45,7 +41,6 @@
     "rimraf": "^3.0.2",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
-    "simple-git-hooks": "^2.5.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
