--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
-    "start": "run-s clean build serve",
+    "start": "run-s build serve",
     "predev": "rimraf dist",
     "dev": "run-p dev:*",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "webpack --watch",
     "serve": "electron .",
-    "clean": "rimraf dist release",
+    "prebuild": "rimraf dist release",
     "build": "webpack --config webpack.config.prod.ts --progress",
     "build:pack": "ts-node ./scripts/build.ts",
-    "package": "run-s clean build build:pack",
+    "package": "run-s build build:pack",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint . --ext .ts,.tsx --fix",
     "lint:prettier": "prettier --write ."
