--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "A boilerplate for Electron, React, and TypeScript projects with hot reload capabilities.",
   "version": "0.2.4",
   "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "main": "dist/main.js",
   "scripts": {
     "start": "run-s build serve",
