--- a/package.json
+++ b/package.json
@@ -29,39 +29,39 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.2.0",
-    "@types/node": "^16.7.1",
+    "@types/node": "^16.7.10",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
-    "electron": "^13.2.2",
+    "electron": "^14.0.0",
     "electron-builder": "^22.11.7",
-    "electron-search-devtools": "^1.4.3",
+    "electron-search-devtools": "^1.4.4",
     "html-webpack-plugin": "^5.3.2",
     "ifdef-loader": "^2.3.0",
-    "mini-css-extract-plugin": "^2.2.0",
+    "mini-css-extract-plugin": "^2.2.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "sass": "^1.38.1",
+    "sass": "^1.39.0",
     "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
   "optionalDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "electron-reload": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.2",
     "wait-on": "^6.0.0"
   },
   "resolutions": {
-    "electron-builder/dmg-builder/dmg-license/plist/xmldom": "github:xmldom/xmldom#0.7.0"
+    "electron-builder/dmg-builder/dmg-license/plist/xmldom": "github:xmldom/xmldom"
   }
 }
