--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "electron-react-ts",
   "description": "A boilerplate for Electron, React, and TypeScript projects with hot reload capabilities.",
-  "version": "0.4.3",
+  "version": "1.0.0",
   "license": "MIT",
   "engines": {
-    "node": ">=12.13.0",
-    "npm": "USE_YARN_INSTEAD"
+    "node": ">=12.13.0"
   },
   "main": "dist/main.js",
   "scripts": {
-    "start": "run-s build serve",
-    "predev": "rimraf dist",
+    "start": "run-s clean build serve",
     "dev": "run-p dev:*",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
-    "dev:webpack": "webpack --watch",
+    "dev:webpack": "webpack --watch --progress",
+    "predev": "rimraf dist",
+    "clean": "rimraf dist release",
     "serve": "electron .",
-    "prebuild": "rimraf dist release",
-    "build": "webpack --config webpack.config.prod.ts --progress",
+    "build": "cross-env NODE_ENV=\"development\" webpack --config webpack.config.prod.ts --progress",
+    "build:prod": "cross-env NODE_ENV=\"production\" webpack --config webpack.config.prod.ts --progress",
     "build:pack": "ts-node ./scripts/build.ts",
-    "package": "run-s build build:pack",
+    "package": "run-s clean build:prod build:pack",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint . --ext .ts,.tsx --fix",
     "lint:prettier": "prettier --write ."
@@ -30,39 +30,37 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.3.0",
-    "@types/node": "^16.9.2",
-    "@types/react": "^17.0.21",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "electron": "^14.0.1",
+    "css-loader": "^6.3.0",
+    "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
-    "electron-search-devtools": "^1.4.5",
     "html-webpack-plugin": "^5.3.2",
     "ifdef-loader": "^2.3.0",
     "mini-css-extract-plugin": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "sass": "^1.41.1",
+    "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
-    "ts-loader": "^9.2.5",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
+    "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0"
   },
   "optionalDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "electron-notarize": "^1.1.1",
     "electron-reload": "^1.5.0",
+    "electron-search-devtools": "^1.4.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "wait-on": "^6.0.0"
-  },
-  "resolutions": {
-    "electron-builder/dmg-builder/dmg-license/plist/xmldom": "github:xmldom/xmldom"
   }
 }
