--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "Node",
     "esModuleInterop": true,
-    "lib": ["DOM", "ES2020"],
-    "jsx": "react",
+    "lib": ["DOM", "ESNext"],
+    "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
     "skipLibCheck": true,
