--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-react-ts",
-  "description": "A boilerplate for Electron, React, and TypeScript projects with hot reload capabilities.",
+  "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
   "version": "1.0.0",
   "license": "MIT",
   "engines": {
