--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 2020,
+    "ecmaVersion": "latest",
     "ecmaFeatures": {
       "jsx": true
     }
