--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
   "version": "1.1.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sprout2000/electron-react-ts"
+  },
   "engines": {
     "node": ">=12.13.0"
   },
