feat: Updated Electron to v16.

--- a/package.json
+++ b/package.json
@@ -34,37 +34,37 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.4.0",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.34",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
-    "electron": "^15.3.0",
-    "electron-builder": "^22.13.1",
+    "electron": "^16.0.2",
+    "electron-builder": "^22.14.5",
     "html-webpack-plugin": "^5.5.0",
-    "ifdef-loader": "^2.3.0",
-    "mini-css-extract-plugin": "^2.4.3",
+    "ifdef-loader": "^2.3.2",
+    "mini-css-extract-plugin": "^2.4.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "sass": "^1.43.4",
+    "sass": "^1.43.5",
     "sass-loader": "^12.3.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "webpack": "^5.61.0",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   },
   "optionalDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "electron-notarize": "^1.1.1",
-    "electron-reload": "^1.5.0",
-    "electron-search-devtools": "^1.5.0",
-    "eslint": "^8.1.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-search-devtools": "^1.5.1",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.0",
     "wait-on": "^6.0.0"
   }
 }
