--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.2.0",
   "license": "MIT",
   "author": {
-    "name": "sprout2000"
+    "name": "sprout2000",
+    "email": "liraxo4023@ztymm.com"
   },
   "repository": {
     "type": "git",
@@ -34,10 +35,12 @@
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "copy-webpack-plugin": "^10.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "electron": "^16.0.4",
     "electron-builder": "^22.14.5",
+    "electron-reload": "^2.0.0-alpha.1",
     "html-webpack-plugin": "^5.5.0",
     "ifdef-loader": "^2.3.2",
     "mini-css-extract-plugin": "^2.4.5",
@@ -45,18 +48,17 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
+    "wait-on": "^6.0.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
   "optionalDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "electron-reload": "^2.0.0-alpha.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1",
-    "wait-on": "^6.0.0"
+    "prettier": "^2.5.1"
   }
 }
