--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "main": "dist/main.js",
   "scripts": {
-    "start": "run-s build serve",
     "dev": "run-p dev:*",
+    "predev": "rimraf dist",
+    "start": "run-s build serve",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "webpack --watch",
@@ -45,6 +46,7 @@
     "ifdef-loader": "^2.3.2",
     "mini-css-extract-plugin": "^2.4.5",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
