--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron": "^16.0.4",
     "electron-builder": "^22.14.5",
     "electron-reload": "^2.0.0-alpha.1",
+    "electron-search-devtools": "^1.5.1",
     "html-webpack-plugin": "^5.5.0",
     "ifdef-loader": "^2.3.2",
     "mini-css-extract-plugin": "^2.4.5",
