--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
     "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "CommonJS",
     "esModuleInterop": true,
+    "moduleResolution": "Node",
     "lib": ["DOM", "ESNext"],
     "jsx": "react-jsx",
     "strict": true,
@@ -17,5 +18,6 @@
       "target": "ES2015",
       "module": "CommonJS"
     }
-  }
+  },
+  "include": ["src/*.ts", "src/@types/*"]
 }
