--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "dev": "run-p dev:*",
     "predev": "rimraf dist",
     "dev:tsc": "tsc -w",
-    "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --watch",
+    "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "serve": "electron .",
     "start": "run-s build serve",
-    "build": "cross-env NODE_ENV=\"development\" webpack",
-    "build:prod": "cross-env NODE_ENV=\"production\" webpack",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "build:release": "ts-node ./electron-builder.ts"
   },
   "dependencies": {
