--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "scripts": {
     "predev": "rimraf dist",
     "dev": "run-p dev:*",
-    "dev:tsc": "tsc -w",
+    "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
-    "serve": "electron .",
-    "start": "run-s build serve",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "build:release": "ts-node ./electron-builder.ts"
   },
