--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "target": "ESNext",
-    "module": "CommonJS",
-    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "ES2020",
     "moduleResolution": "Node",
-    "lib": ["DOM", "ESNext"],
+    "esModuleInterop": true,
+    "lib": ["DOM", "ES2020"],
     "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true
+    "resolveJsonModule": true
   },
   "ts-node": {
     "compilerOptions": {
       "target": "ES2015",
       "module": "CommonJS"
     }
-  },
-  "include": ["src/*.ts", "src/@types/*"]
+  }
 }
