--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "ifdef-loader": "^2.3.2",
     "mini-css-extract-plugin": "^2.4.5",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
