--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
+    "build": "ts-node ./electron-builder.ts",
+    "prod": "cross-env NODE_ENV=\"production\" webpack --progress",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "predev": "rimraf dist release",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "prepackage": "run-s predev build",
-    "package": "ts-node ./electron-builder.ts"
+    "prebuild": "run-s predev prod"
   },
   "dependencies": {
     "react": "^17.0.2",
