--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
-    "build": "ts-node ./electron-builder.ts",
-    "prod": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "build": "run-s build:*",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
-    "predev": "rimraf dist release",
-    "prebuild": "run-s predev prod"
+    "build:webpack": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "build:builder": "ts-node ./electron-builder.ts"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -36,7 +35,6 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "ts-loader": "^9.2.6",
