--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
     "build:webpack": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "build:builder": "ts-node ./electron-builder.ts"
+    "build:builder": "ts-node ./electron-builder.ts",
+    "predev": "rimraf dist"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -35,6 +36,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "ts-loader": "^9.2.6",
