--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-react-ts",
-  "productName": "Sample",
+  "productName": "Electron React TypeScript",
   "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
   "version": "1.3.9",
   "license": "MIT",
