--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
-    "build": "run-s build:*",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "predev": "rimraf dist",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
-    "build:webpack": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "build:builder": "ts-node ./electron-builder.ts",
-    "predev": "rimraf dist"
+    "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron ."
   },
   "dependencies": {
     "react": "^17.0.2",
