--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^6.7.1",
     "electron": "^17.2.0",
     "electron-reload": "^2.0.0-alpha.1",
+    "electron-search-devtools": "^1.6.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
