--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -4,5 +4,5 @@
     "module": "CommonJS",
     "outDir": "dist"
   },
-  "include": ["src/main/*.ts", "src/@types/*.d.ts"]
+  "include": ["src/*.ts", "src/@types/*.d.ts"]
 }
