--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES2020",
+    "module": "ES2020",
     "esModuleInterop": true,
     "moduleResolution": "Node",
+    "lib": ["DOM", "ES2020"],
     "jsx": "react",
     "strict": true
   },
   "ts-node": {
     "compilerOptions": {
-      "target": "ESNext",
+      "target": "ES2020",
       "module": "CommonJS"
     }
   }
