--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "run-p dev:*",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "predev": "rimraf dist",
+    "dev": "run-p dev:*",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron ."
+    "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "preview": "electron ."
   },
   "dependencies": {
     "react": "^18.1.0",
