--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
   "version": "1.7.5",
   "license": "MIT",
+  "author": "sprout2000",
   "main": "dist/main.js",
   "scripts": {
     "predev": "rimraf dist",
@@ -11,20 +12,23 @@
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
+    "prebuild": "rimraf dist release",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "preview": "electron ."
+    "preview": "electron .",
+    "package": "ts-node ./scripts/builder.ts"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "electron": "^19.0.9",
+    "electron-builder": "^23.1.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-search-devtools": "^1.8.5",
     "html-webpack-plugin": "^5.5.0",
@@ -35,7 +39,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "wait-on": "^6.0.1",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
 }
