--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
-    "prebuild": "rimraf dist release",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "preview": "electron .",
-    "package": "ts-node ./scripts/builder.ts"
+    "package": "ts-node ./builder.ts"
   },
   "dependencies": {
     "react": "^18.2.0",
