--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "electron-react-ts",
-  "productName": "Electron React TypeScript",
-  "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
-  "version": "1.7.8",
+  "description": "An Electron boilerplate",
+  "version": "1.8.0",
   "license": "MIT",
   "author": "sprout2000",
   "main": "dist/main.js",
