--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "run-p dev:*",
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html && wait-on ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "package": "ts-node ./builder.ts"
   },
