--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "predev": "rimraf dist",
     "dev": "run-p dev:*",
-    "dev:tsc": "tsc -w -p tsconfig.main.json",
+    "dev:tsc": "tsc -w -p tsconfig.node.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
