--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "sprout2000",
   "main": "dist/main.js",
   "scripts": {
-    "predev": "rimraf dist",
     "dev": "run-p dev:*",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "package": "ts-node ./builder.ts",
     "dev:tsc": "tsc -w -p tsconfig.node.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "package": "ts-node ./builder.ts"
+    "predev": "rimraf dist",
+    "prebuild": "rimraf dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,7 +28,6 @@
     "electron": "^21.1.1",
     "electron-builder": "^23.6.0",
     "electron-reload": "^2.0.0-alpha.1",
-    "electron-search-devtools": "^1.8.7",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "npm-run-all": "^4.1.5",
