--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "name": "electron-react-ts",
-  "description": "An Electron boilerplate",
-  "version": "1.9.8",
-  "license": "MIT",
-  "author": "sprout2000",
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
@@ -12,8 +8,7 @@
     "dev:tsc": "tsc -w -p tsconfig.node.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
-    "predev": "rimraf dist",
-    "prebuild": "rimraf dist"
+    "predev": "rimraf dist"
   },
   "dependencies": {
     "react": "^18.2.0",
