--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "ESNext",
+    "module": "ESNext",
     "esModuleInterop": true,
     "moduleResolution": "Node",
-    "lib": ["DOM", "ES2020"],
+    "lib": ["DOM", "ESNext"],
     "jsx": "react-jsx",
     "strict": true
   },
   "ts-node": {
     "compilerOptions": {
-      "target": "ES2020",
       "module": "CommonJS"
     }
   }
