--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "electron-react-ts",
   "version": "0.0.0",
   "description": "Electron App",
+  "license": "",
   "author": "",
   "main": "dist/main.js",
   "scripts": {
