--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
-    "build": "run-s dev:clean build:*",
-    "dev:clean": "rimraf dist",
+    "build": "run-s predev build:*",
+    "predev": "rimraf dist",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electron .",
     "build:electron": "cross-env NODE_ENV=\"production\" webpack --progress",
