--- a/package.json
+++ b/package.json
@@ -7,26 +7,23 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "run-p dev:*",
-    "build": "run-s predev build:*",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "predev": "rimraf dist",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electron .",
-    "build:electron": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "build:builder": "ts-node ./builder.ts"
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electron ."
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "electron": "^21.2.0",
-    "electron-builder": "^23.6.0",
-    "electron-nice-auto-reload": "^1.3.0",
+    "electron": "^21.2.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "npm-run-all": "^4.1.5",
