--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "author": "",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "run-p dev:*",
+    "dev": "rimraf dist && run-p dev:webpack dev:electron",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
-    "predev": "rimraf dist",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon ."
   },
