--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^18.0.10",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
-    "electron": "^22.1.0",
+    "electron": "^22.2.0",
     "electronmon": "^2.0.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
@@ -34,9 +34,12 @@
     "rimraf": "^4.1.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "wait-on": "^7.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "overrides": {
+    "http-cache-semantics": "^4.1.1"
   }
 }
