--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "rimraf dist && run-p dev:webpack dev:electron",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "build": "rimraf dist && cross-env NODE_ENV=\"production\" webpack --progress",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon ."
   },
