--- a/package.json
+++ b/package.json
@@ -6,37 +6,33 @@
   "author": "",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "rimraf dist && run-p dev:webpack dev:electron",
+    "dev": "rimraf dist && run-p dev:*",
     "build": "rimraf dist && cross-env NODE_ENV=\"production\" webpack --progress",
+    "dev:tsc": "tsc -w -p tsconfig.node.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon ."
-  },
-  "electronmon": {
-    "patterns": [
-      "dist/**/*"
-    ]
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron ."
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.18.8",
-    "@types/react": "^18.2.34",
-    "@types/react-dom": "^18.2.14",
+    "@types/node": "^18.19.14",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "electron": "^27.0.3",
-    "electronmon": "^2.0.2",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
+    "css-loader": "^6.10.0",
+    "electron": "^28.2.1",
+    "electron-reload": "^2.0.0-alpha.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "wait-on": "^7.1.0",
-    "webpack": "^5.89.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "wait-on": "^7.2.0",
+    "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   }
 }
