--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electronmon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "ts-checker-rspack-plugin": "^1.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "wait-on": "^8.0.1"
